調整整體： ・圓角的樣式與尺寸統一使用 ・標題跟內文可以再稍微用顏色或透明度做出區隔
調整關於(about)頁面
・修正單行過長問題
・修正上半部的排版問題
・PC尺寸畫面，字級調整為最小14px

--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -181,7 +181,8 @@
   margin-bottom: 1rem;
 }
 
-.card-articles__date {
+.list-group {
+  border-radius: 0.25rem;
 }
 
 .goods-detail-description {
@@ -224,16 +225,16 @@
   background: rgba(255, 255, 255, 0.85);
 }
 
-.cart-detail-list {
-  
-}
-
 .accordion-button {
   font-weight: bold;
-  border-radius: 0rem!important;
+  border-radius: 0rem !important;
 }
 
 .accordion-item {
   margin: 1rem 0;
   border: none;
+}
+
+.text-inner {
+  opacity: 0.85 !important;
 }
