--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -178,7 +178,11 @@
 
 .card-articles {
   border: none;
-  margin-bottom: 1rem;
+  background: rgba(255, 255, 255, 0.95);
+  & .badge {
+    border-top-left-radius: 0.25rem !important;
+    border-bottom-right-radius: 0.25rem !important;
+  }
 }
 
 .list-group {
